adding generated assets

--- a/priv/static/app.css
+++ b/priv/static/app.css
@@ -963,6 +963,19 @@ select {
   height: 1.5rem
 }
 
+.hero-play {
+  --hero-play: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" data-slot="icon">  <path stroke-linecap="round" stroke-linejoin="round" d="M5.25 5.653c0-.856.917-1.398 1.667-.986l11.54 6.347a1.125 1.125 0 0 1 0 1.972l-11.54 6.347a1.125 1.125 0 0 1-1.667-.986V5.653Z"/></svg>');
+  -webkit-mask: var(--hero-play);
+  mask: var(--hero-play);
+  -webkit-mask-repeat: no-repeat;
+          mask-repeat: no-repeat;
+  background-color: currentColor;
+  vertical-align: middle;
+  display: inline-block;
+  width: 1.5rem;
+  height: 1.5rem
+}
+
 ul {
   margin-bottom: 1.25rem;
   list-style-type: disc;
@@ -1423,6 +1436,10 @@ h3 {
 
 .w-full {
   width: 100%
+}
+
+.w-6 {
+  width: 1.5rem
 }
 
 .max-w-3xl {
